--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Faizan Arif</h1>
-				<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5
-						UP</a><br />
-					and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+				<p>I'm a Full Stack Software Engineer
+					I turn ideas into digital solutions.💻🌐 <br />
+					Now, I'm eager to transition into AI Engineering.</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
 				</ul>
@@ -51,12 +51,13 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+				<a href="#" class="image"><img src="images/p1.png" alt="" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Sed ipsum dolor</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
+						<h2>Agecroft Capital Dashboard</h2>
+						<p>Designed a user-friendly loan management system using Bootstrap and react-strap to enhance
+							the interface. Achieved a reduction in the website's bounce rate by 8.6%, indicating
+							enhanced user retention and engagement.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn more</a></li>
 						</ul>
@@ -64,12 +65,14 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+				<a href="#" class="image"><img src="images/p2.jpeg" alt="" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Feugiat consequat</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
+						<h2>Sheranwala Dashboard</h2>
+						<p>Developed a web application to streamline HR, accounting, and inventory management for
+							businesses.
+							Utilized React for building the user interface to ensure a responsive and interactive
+							experience.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn more</a></li>
 						</ul>
@@ -77,14 +80,14 @@
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+				<a href="#" class="image"><img src="images/p3.png" alt="" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Ultricies aliquam</h2>
-						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
-							erat malesuada quis. Aliquam dapibus.</p>
+						<h2>Prallen Portfolio</h2>
+						<p>Utilized React and Vite to construct a dynamic front-end, ensuring efficient load times and a
+							responsive user interface.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn more</a></li>
+							<li><a href="https://prallen.com" class="button">Learn more</a></li>
 						</ul>
 					</div>
 				</div>
@@ -94,46 +97,29 @@
 		<!-- Two -->
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
-				<h2>What we do</h2>
-				<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-					malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-					imperdiet est velit quis lorem.</p>
+				<h2>What I Do</h2>
+				<p>I provide comprehensive digital solutions as a Full Stack Software Engineer.</p>
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-code"></span>
-						<h3>Lorem ipsum amet</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<h3>Web Development</h3>
+						<p>Crafting responsive and engaging websites with modern technologies.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-lock"></span>
-						<h3>Aliquam sed nullam</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<h3>Backend Development</h3>
+						<p> Designing robust server-side systems for secure and efficient functionality.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-cog"></span>
-						<h3>Sed erat ullam corper</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-desktop"></span>
-						<h3>Veroeros quis lorem</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
-					</section>
-					<section>
-						<span class="icon solid major fa-link"></span>
-						<h3>Urna quis bibendum</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<h3>Full Stack Solutions</h3>
+						<p>Delivering complete solutions that integrate frontend and backend seamlessly.</p>
 					</section>
 					<section>
 						<span class="icon major fa-gem"></span>
-						<h3>Aliquam urna dapibus</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<h3>AI & Machine Learning</h3>
+						<p>Exploring AI and machine learning to solve complex problems and innovate new products.Aliquam
+							sed nullam</p>
 					</section>
 				</div>
 				<ul class="actions">
